# apache_flink-kickstarter

./: .dockerignore  .gitignore  .terraform.lock.hcl  CHANGELOG.md  Glossary.md  KNOWNISSUES.md  LICENSE.md  README.md  apache-iceberg-in-action-with-flink-using-java.md  aws-iam-glue-setup.tf  aws-iam-resources.tf  aws-iam-snowflake-setup.tf  aws-resources.tf  aws-s3-iceberg-bucket-setup.tf  aws-s3-resources.tf  aws-secret_manager-confluent-secrets.tf  aws-secret_manager-confluent.tf  aws-secret_manager-snowflake-secrets.tf  aws-secret_manager-snowflake.tf  aws-secret_manager_secret-resources.tf  aws-ssm_parameter-confluent-kafka-client-parameters.tf  aws-ssm_parameter-resources.tf  confluent-cloud-resources.tf  confluent-flink-resources.tf  confluent-flink-setup.tf  confluent-kafka-resources.tf  confluent-kafka-setup.tf  confluent-resources.tf  confluent-schema-registry-resources.tf  confluent-schema_registry-setup.tf  data.tf  deploy-flink.sh  deploy-terraform.sh  docker-compose.yml  linux-Dockerfile  linux-docker-compose-extend-resources.yml  linux-docker-compose.yml  mac-Dockerfile  mac-docker-compose-extend-resources.yml  mac-docker-compose.yml  (+30 more)
.blog/: apache-iceberg-in-action-with-apache-flink-using-java.md  apache-iceberg-in-action-with-apache-flink-using-python.md  apache-iceberg-in-action-with-flink-using-java.md  apache-iceberg-in-action-with-flink.md  aws-parameters.md  aws-secrets.md  back-story-on-getting-avro-kafka-sinking-working-in-flink.md  connecting-apache-iceberg-tables-to-snowflake-schema.md  datastream-vs-table-api.md  deploy-flink-script-explanation.md  deploy-terraform-script-explanation.md  docker-usage.md  get-your-jar-versions-right.md  how-create-a-pyflink-udtf.md  rationale-behind-calling-it-flink-app.md  run-flink-locally-script-explanation.md  run-terraform-locally-script-explanation.md  setup-github.md  setup-terraform-cloud.md  unlocking-schema-registry-access.md  using-iceberg-as-a-sink-in-flink.md  using-non-managed-apache-iceberg-tables-in-snowflake.md
ccaf/: Dockerfile  README.md  pyproject.toml
ccaf/scripts/: run-ccaf-docker-locally.sh  run-flight-consolidator-ccaf-docker-locally.sh  run-python-ccaf-docker-locally.sh
ccaf/src/ccaf/: __init__.py  flight_consolidator_app.py
ccaf/src/ccaf/helper/: common.py  settings.py
flink_sql_statements/: create_airline_flight_avro_ccaf_table.fql  create_airline_flights_table.fql  create_flight_avro_ccaf_table.fql
java/: .gitignore  README.md  settings.gradle.kts
python/: .gitignore  Pipfile  README.md  pyproject.toml
python/kickstarter/: Common.py  ProcessUserStatisticsDataFunction.py  airlines_visualization.py  basic_operations.py  common_functions.py  data_generator.py  data_generator_app.py  flight_dashboard.py  flight_importer_app.py  flink_kickstarter_visualization.py  flyer_stats_app.py  kafka_client.py  kafka_client_properties_lookup.py  process_user_statistics_data_function.py  udf_play.py  user_statistics_app.py
python/kickstarter/enums/: error_enum.py
python/kickstarter/helper/: aws_connector.py  aws_services.py  kafka_client.py  kafka_producer_connector.py  kafka_properties.py  kafka_schema_connector.py  kafka_topic_connector.py  process_flyer_stats_data_function.py  process_user_statistics_data_function.py  utilities.py
python/kickstarter/model/: FlightData.py  airline_flight_data.py  flight_data.py  skyone_airline_flight_data.py  skyone_airlines_flight_data.py  sunset_air_flight_data.py  sunset_airline_flight_data.py  user_statistics_data.py
python/src/kickstarter/: avro_flight_consolidator_app.py  avro_flyer_stats_app.py  flight_importer_app.py  flink_kickstarter_visualization.py  flyer_stats_app.py  json_flight_consolidator_app.py  json_flyer_stats_app.py
python/src/kickstarter/helper/: aws_confluent_properties.py  common.py  confluent_properties_udtf.py  custom_avro_deserialization_schema.py  custom_avro_serialization_schema.py  flyer_stats_process_window_function.py  kafka_producer.py  kafka_properties_udtf.py  kafka_schema.py  kafka_schema_registry.py  utilities.py
python/src/kickstarter/model/: airline_flight_data.py  flight_data.py
python/src/kickstarter/model/avro/: AirlineAvroData.avro  AirlineAvroData.avsc  FlightAvroData.avro  FlightAvroData.avsc  FlyerStatsAvroData.avro  FlyerStatsAvroData.avsc
python/tests/kickstarter/: test_flight_importer_app.py  test_helpers.py
python_ccaf/: .gitignore  Dockerfile  README.md  pyproject.toml  setup_pyshell.py
python_ccaf/src/kickstarter/: avro_flight_consolidator_app.py  avro_flight_consolidator_ccaf_app.py  avro_flyer_stats_ccaf_app.py
python_ccaf/src/kickstarter/helper/: settings.py
scripts/: README.md  deploy-terraform.sh  force-aws-secrets-destroy.sh  get_aws_sso_role_name.sh  run-avro-flight-consolidator-ccaf-app-locally.sh  run-avro-flyer-stats-ccaf-app-locally.sh  run-docker-compose.sh  run-flight-consolidator-ccaf-app-locally.sh  run-flink-locally.sh  (+3 more)
(+129 files in other folders)
